package com.fdmgroup.SmartPay_BackEnd.domain.dtos;

/**
 * US-F02-02-01 (Sign In)
 * DTO for incoming login requests from the client.
 *
 */
public class LoginRequestDTO {

    private String email;
    private String password;


    public String getEmail() {
        return email;
    }


    public void setEmail(String email) {
        this.email = email;
    }


    public String getPassword() {
        return password;
    }


    public void setPassword(String password) {
        this.password = password;
    }
}
