package com.fdmgroup.SmartPay_BackEnd.domain.dtos;

public class UserRequestDTO {
    // TODO
}
